<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="activity"
                type="kr.gdg.plant.view.activity.SearchActivity"/>

        <variable
                name="model"
                type="kr.gdg.plant.view.viewmodel.SearchViewModel"/>
    </data>

    <ScrollView
            android:id="@+id/search_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

            <!--android:background="@drawable/custom_search_box"-->
            <ImageView
                    android:id="@+id/search_iv_box"
                    android:layout_width="294dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:alpha="0.8"
                    app:loadImageDrawable="@{model.searchImage1}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <!--android:background="@drawable/top_search"-->
            <ImageView
                    android:id="@+id/search_iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:alpha="0.8"
                    app:loadImageDrawable="@{model.searchImage2}"
                    app:layout_constraintTop_toTopOf="@id/search_iv_box"
                    app:layout_constraintLeft_toLeftOf="@id/search_iv_box"
                    app:layout_constraintBottom_toBottomOf="@id/search_iv_box"/>

            <EditText
                    android:id="@+id/search_et"
                    style="@style/custom_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="text"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="12sp"
                    android:hint="@string/search_hint"
                    android:textColorHint="@color/color_B3B3B3"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="@id/search_iv_box"
                    app:layout_constraintLeft_toLeftOf="@id/search_iv_box"
                    app:layout_constraintRight_toRightOf="@id/search_iv_box"
                    app:layout_constraintBottom_toBottomOf="@id/search_iv_box"/>

            <!--region 데이터 검색 전-->
            <include
                    android:id="@+id/include_kind_of_plant"
                    layout="@layout/include_kind_of_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/search_iv_box"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            <!--endregion-->

            <!--region 데이터를 검색할 때-->
            <TextView
                    android:id="@+id/search_tv_recently_text"
                    style="@style/custom_text_view_medium"
                    android:layout_width="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/recently_search_text"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@id/search_iv_box"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_rv_result_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@id/search_tv_recently_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            <!--endregion-->

            <!--region 검색 결과가 있고 이미지를 보여줄 때 -->
            <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/search_rv_result_data"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:visibility="gone"-->
            <!--tools:visibility="visible"-->
            <!--app:layoutManager="android.support.v7.widget.GridLayoutManager"-->
            <!--app:spanCount="2"-->
            <!--app:layout_constraintTop_toBottomOf="@id/search_iv_box"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"/>-->
            <!--endregion-->

            <!--region 검색 결과가 없을 때-->
            <androidx.cardview.widget.CardView
                    android:id="@+id/search_cv_result_data_no"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/search_iv_box"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="16dp"
                    app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/search_tv_title"
                            style="@style/custom_text_view_regular"
                            android:layout_marginBottom="55dp"
                            android:letterSpacing="-0.03"
                            android:gravity="center_horizontal"
                            tools:text="“마오리소포라” 가 없다면
문의하기를 눌러주세요"
                            android:textSize="16sp"
                            android:textColor="@color/color_4A4A4A"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/search_iv_no_data"/>

                    <ImageView
                            android:id="@+id/search_iv_no_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/img_ss_search"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                            android:id="@+id/search_bt_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="55dp"
                            android:paddingStart="33dp"
                            android:paddingEnd="33dp"
                            android:background="@drawable/custom_button"
                            android:fontFamily="@font/noto_bold"
                            android:text="@string/contact"
                            android:textSize="16sp"
                            android:textColor="@android:color/white"
                            app:layout_constraintTop_toBottomOf="@id/search_iv_no_data"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <!--endregion-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>